--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div>
             <h1><strong>When?</strong></h1>
-            <p><strong>Departure:</strong> 6th of December at 06:05am.</p>
+            <p><strong>Departure:</strong> 6th of December at 06:00am.</p>
             <p><strong>Arrival:</strong> 9th of December at 08:25am.</p>
             <p></p>
             <p><i>Departure and arrival from Berlin Airport.</i></p>
@@ -67,7 +67,7 @@
         </div>
         <div>
             <h1><strong>Where?</strong></h1>
-            <p>Surprise.</p>
+            <p>Somewhere north</p>
         </div>
         <div class="scroll-indicator-bottom">
             <a href="#faq">↓</a>
