--- a/index.html
+++ b/index.html
@@ -9,13 +9,6 @@
 
 </head>
 <body>
-    <!-- <nav>
-        <a href="/html/">HTML</a> |
-        <a href="/css/">CSS</a> |
-        <a href="/js/">JavaScript</a> |
-        <a href="/python/">Python</a>
-      </nav> -->
-
     <!-- First Section -->
     <section id="home">
         <div class="container">
@@ -67,7 +60,9 @@
         </div>
         <div>
             <h1><strong>Where?</strong></h1>
-            <p>Somewhere north</p>
+            <p>Somewhere north</p> 
+<!--Or maybe not... Actually we are going to Rome, but you'll never discover beforehand because of your lack of IT knowledge-->
+            
         </div>
         <div class="scroll-indicator-bottom">
             <a href="#faq">↓</a>
