--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
        <div>
            <h1><strong>FAQ</strong></h1>
            <p>For any questions, ask Zé!</p>
+           <i>There's a way to know where we are going, but you have to know more details about my job</i>
            <!-- <p><span class="caps">r</span>eady <span class="caps">o</span>r <span class="caps">m</span>ore <span class="caps">e</span>xcited?</p> -->
    </section>
     
