--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
        <div>
            <h1><strong>FAQ</strong></h1>
            <p>For any questions, ask Zé!</p>
-           <i>"To figure out where we're headed, you'll need to understand more about what I do for a living."</i>
+           <p></p><i>"To figure out where we're headed, you'll need to understand more about what I do for a living."</i></p>
    </section>
     
 </body>
